--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "react-dom": "^19"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5",
     "vite": "^6",
     "vite-tsconfig-paths": "^5"
