--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-router": "^1",
     "@tanstack/react-start": "^1",
+    "ghostty-web": "^0.4.0",
     "react": "^19",
     "react-dom": "^19"
   },
