--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-router": "^1",
     "@tanstack/react-start": "^1",
     "ghostty-web": "^0.4.0",
+    "nuqs": "^2.8.8",
     "react": "^19",
     "react-dom": "^19"
   },
@@ -25,7 +26,7 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5",
-    "vite": "^6",
+    "vite": "^7",
     "vite-tsconfig-paths": "^5"
   }
 }
